--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página de prueba para encabezado">
+    <link rel="stylesheet" href="estios.css">
     <title>encabezado</title>
 </head>
+
+<header>
+  <h1>Encabezado principal</h1>
+</header>
+
 <body>
     
 </body>
