--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página de prueba para encabezado">
-    <link rel="stylesheet" href="estios.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Página de prueba para encabezado" />
+    <link rel="stylesheet" href="estios.css" />
     <title>encabezado</title>
-</head>
+  </head>
 
-<header>
-  <h1>Encabezado principal</h1>
-</header>
+  <header>
+    <h1>Encabezado principal</h1>
+  </header>
 
-<body>
-    
-</body>
+  <body></body>
 </html>
